--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "sequelize": "^6.21.3"
   },
   "devDependencies": {
+    "multer": "^1.4.5-lts.1",
     "sequelize-cli": "^6.4.1",
     "yargs": "^17.5.1"
   }
