--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "license": "MIT",
   "dependencies": {
     "argon2": "^0.28.7",
+    "connect-session-sequelize": "^7.1.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-joi-validation": "^5.0.1",
     "express-session": "^1.17.3",
+    "joi": "^17.6.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.3"
   },
